--- a/2_Version Control and Branch Management (GIT)/praktikum/index.html
+++ b/2_Version Control and Branch Management (GIT)/praktikum/index.html
@@ -17,6 +17,7 @@
         
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="#">Menu</a></li>
         </ul>
     </nav>
 
